[gd_scene load_steps=14 format=3 uid="uid://t77vwwgh20jj"]

[ext_resource type="Script" path="res://Scenes/Terrain/Dungeon_Generation/Tutorial/dun_gen.gd" id="1_g0qme"]
[ext_resource type="Script" path="res://Scenes/Levels/test_dungeon.gd" id="1_kpknd"]
[ext_resource type="MeshLibrary" uid="uid://c2vlwkg4hclve" path="res://Scenes/Terrain/Dungeon_Generation/Tutorial/dungeon_tiles_resized.tres" id="2_nilto"]
[ext_resource type="Script" path="res://Scenes/Terrain/Dungeon_Generation/Custom/gen_map_custom.gd" id="3_dumil"]
[ext_resource type="Script" path="res://Scenes/Terrain/Dungeon_Generation/Custom/wall_grid_map.gd" id="4_8fj2y"]
[ext_resource type="MeshLibrary" uid="uid://cupdum2h3or0d" path="res://Tileset/tiles2.tres" id="4_l2w8b"]
[ext_resource type="MeshLibrary" uid="uid://cesdw4mponpmt" path="res://Scenes/Terrain/wall_gen_tiles.tres" id="4_sun1y"]
[ext_resource type="PackedScene" uid="uid://6kakbhuggq26" path="res://Scenes/Characters/knight.tscn" id="7_mwitb"]
[ext_resource type="PackedScene" uid="uid://phrn6ufk40eb" path="res://Scenes/Characters/NPCs/npc_1.tscn" id="9_eli7f"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_jifod"]

[sub_resource type="Sky" id="Sky_q5pke"]
sky_material = SubResource("ProceduralSkyMaterial_jifod")

[sub_resource type="Environment" id="Environment_sir36"]
background_mode = 1
background_color = Color(1, 1, 1, 1)
sky = SubResource("Sky_q5pke")
ambient_light_source = 2
ambient_light_color = Color(0.176419, 0.176419, 0.176419, 1)
ambient_light_energy = 12.0
reflected_light_source = 2
tonemap_mode = 2
volumetric_fog_density = 0.0
volumetric_fog_albedo = Color(0, 0, 0, 1)
volumetric_fog_emission_energy = 0.0
volumetric_fog_gi_inject = 0.23

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_x5fmk"]

[node name="test_dungeon2" type="Node3D" groups=["Level"]]
script = ExtResource("1_kpknd")

[node name="Hazards" type="Node3D" parent="."]

[node name="Environment" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_sir36")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
visible = false
light_energy = 0.484
light_volumetric_fog_energy = 0.0

[node name="Lights" type="Node3D" parent="Environment"]
visible = false

[node name="OmniLight3D" type="OmniLight3D" parent="Environment/Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7, 0)
light_color = Color(0.996078, 0.980392, 0.847059, 1)
light_energy = 10.0
shadow_enabled = true
omni_range = 10.0

[node name="WorldBorder" type="StaticBody3D" parent="Environment"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/WorldBorder"]
transform = Transform3D(100, 0, 0, 0, 100, 0, 0, 0, 100, 0, 0, 0)
shape = SubResource("WorldBoundaryShape3D_x5fmk")

[node name="Gridmaps" type="Node3D" parent="."]

[node name="DunGen" type="Node3D" parent="Gridmaps" node_paths=PackedStringArray("grid_map", "level", "mesh_customizer", "wallgrid_spawner")]
script = ExtResource("1_g0qme")
grid_map = NodePath("../SourceGridMap")
level = NodePath("../..")
wallgrid_spawn = true
border_size = 50
mesh_customizer = NodePath("../GridMapMeshCustomizer")
wallgrid_spawner = NodePath("../WallGridSpawner")
room_number = 20

[node name="SourceGridMap" type="GridMap" parent="Gridmaps"]
mesh_library = ExtResource("2_nilto")
cell_center_y = false
data = {
"cells": PackedInt32Array(35, 8, 3, 36, 8, 3, 37, 8, 3, 38, 8, 3, 35, 9, 3, 36, 9, 0, 37, 9, 0, 38, 9, 3, 35, 10, 3, 36, 10, 0, 37, 10, 0, 38, 10, 3, 35, 11, 0, 36, 11, 3, 37, 11, 3, 38, 11, 3, 12, 2, 0, 13, 2, 0, 14, 2, 0, 15, 2, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 3, 12, 4, 0, 13, 4, 0, 14, 4, 0, 15, 4, 3, 12, 5, 0, 13, 5, 3, 14, 5, 3, 15, 5, 3, 30, 43, 3, 31, 43, 3, 32, 43, 3, 33, 43, 3, 30, 44, 3, 31, 44, 0, 32, 44, 0, 33, 44, 3, 30, 45, 3, 31, 45, 0, 32, 45, 0, 33, 45, 0, 30, 46, 3, 31, 46, 0, 32, 46, 0, 33, 46, 0, 21, 42, 3, 22, 42, 3, 23, 42, 3, 24, 42, 3, 21, 43, 3, 22, 43, 0, 23, 43, 0, 24, 43, 3, 21, 44, 3, 22, 44, 0, 23, 44, 0, 24, 44, 3, 21, 45, 3, 22, 45, 0, 23, 45, 0, 24, 45, 3, 6, 30, 3, 7, 30, 0, 8, 30, 0, 9, 30, 3, 6, 31, 3, 7, 31, 0, 8, 31, 0, 9, 31, 3, 6, 32, 3, 7, 32, 0, 8, 32, 0, 9, 32, 3, 6, 33, 3, 7, 33, 3, 8, 33, 3, 9, 33, 3, 21, 6, 3, 22, 6, 3, 23, 6, 3, 24, 6, 3, 21, 7, 3, 22, 7, 0, 23, 7, 0, 24, 7, 3, 21, 8, 3, 22, 8, 3, 23, 8, 0, 24, 8, 0, 21, 9, 3, 22, 9, 3, 23, 9, 0, 24, 9, 0, 36, 33, 3, 37, 33, 3, 38, 33, 3, 39, 33, 3, 36, 34, 0, 37, 34, 0, 38, 34, 0, 39, 34, 0, 36, 35, 3, 37, 35, 0, 38, 35, 0, 39, 35, 0, 36, 36, 3, 37, 36, 3, 38, 36, 3, 39, 36, 0, 6, 38, 3, 7, 38, 3, 8, 38, 3, 9, 38, 3, 6, 39, 3, 7, 39, 0, 8, 39, 0, 9, 39, 3, 6, 40, 0, 7, 40, 0, 8, 40, 0, 9, 40, 3, 6, 41, 0, 7, 41, 0, 8, 41, 0, 9, 41, 3, 26, 29, 3, 27, 29, 3, 28, 29, 3, 29, 29, 3, 26, 30, 3, 27, 30, 0, 28, 30, 0, 29, 30, 3, 26, 31, 3, 27, 31, 0, 28, 31, 0, 29, 31, 0, 26, 32, 3, 27, 32, 3, 28, 32, 3, 29, 32, 0, 23, 22, 3, 24, 22, 3, 25, 22, 3, 26, 22, 0, 23, 23, 3, 24, 23, 0, 25, 23, 0, 26, 23, 3, 23, 24, 3, 24, 24, 0, 25, 24, 0, 26, 24, 3, 23, 25, 3, 24, 25, 3, 25, 25, 3, 26, 25, 3, 45, 25, 3, 46, 25, 0, 47, 25, 0, 48, 25, 0, 45, 26, 3, 46, 26, 0, 47, 26, 0, 48, 26, 0, 45, 27, 3, 46, 27, 0, 47, 27, 0, 48, 27, 0, 45, 28, 3, 46, 28, 0, 47, 28, 0, 48, 28, 0, 36, 13, 3, 37, 13, 3, 38, 13, 3, 39, 13, 3, 36, 14, 0, 37, 14, 0, 38, 14, 0, 39, 14, 3, 36, 15, 0, 37, 15, 0, 38, 15, 0, 39, 15, 0, 36, 16, 3, 37, 16, 3, 38, 16, 3, 39, 16, 3, 40, 0, 0, 41, 0, 0, 42, 0, 0, 43, 0, 0, 40, 1, 0, 41, 1, 0, 42, 1, 0, 43, 1, 0, 40, 2, 3, 41, 2, 0, 42, 2, 0, 43, 2, 0, 40, 3, 3, 41, 3, 3, 42, 3, 3, 43, 3, 3, 16, 11, 3, 17, 11, 3, 18, 11, 3, 19, 11, 3, 16, 12, 3, 17, 12, 0, 18, 12, 3, 19, 12, 3, 16, 13, 0, 17, 13, 0, 18, 13, 0, 19, 13, 3, 16, 14, 0, 17, 14, 3, 18, 14, 3, 19, 14, 3, 34, 23, 3, 35, 23, 3, 36, 23, 3, 37, 23, 3, 34, 24, 3, 35, 24, 0, 36, 24, 0, 37, 24, 3, 34, 25, 3, 35, 25, 0, 36, 25, 0, 37, 25, 3, 34, 26, 3, 35, 26, 3, 36, 26, 3, 37, 26, 3, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 3, 24, 2, 3, 25, 2, 0, 26, 2, 0, 27, 2, 3, 24, 3, 3, 25, 3, 3, 26, 3, 3, 27, 3, 3, 1, 30, 0, 2, 30, 3, 3, 30, 3, 4, 30, 3, 1, 31, 0, 2, 31, 0, 3, 31, 0, 4, 31, 3, 1, 32, 0, 2, 32, 0, 3, 32, 0, 4, 32, 3, 1, 33, 0, 2, 33, 3, 3, 33, 3, 4, 33, 3, 19, 27, 3, 20, 27, 0, 21, 27, 3, 22, 27, 3, 19, 28, 3, 20, 28, 0, 21, 28, 3, 22, 28, 3, 19, 29, 3, 20, 29, 0, 21, 29, 0, 22, 29, 3, 19, 30, 3, 20, 30, 0, 21, 30, 3, 22, 30, 3, 2, 25, 0, 3, 25, 0, 4, 25, 0, 5, 25, 0, 2, 26, 0, 3, 26, 0, 4, 26, 0, 5, 26, 0, 2, 27, 0, 3, 27, 0, 4, 27, 0, 5, 27, 0, 2, 28, 3, 3, 28, 3, 4, 28, 3, 5, 28, 3, 28, 24, 3, 29, 24, 3, 30, 24, 0, 31, 24, 3, 28, 25, 3, 29, 25, 0, 30, 25, 0, 31, 25, 3, 28, 26, 3, 29, 26, 0, 30, 26, 0, 31, 26, 3, 28, 27, 3, 29, 27, 3, 30, 27, 3, 31, 27, 3, 39, 12, 2, 39, 11, 2, 39, 10, 2, 39, 9, 2, 39, 8, 2, 39, 7, 2, 39, 6, 2, 39, 5, 2, 39, 4, 2, 39, 3, 2, 38, 12, 2, 38, 7, 2, 38, 6, 2, 38, 5, 2, 38, 4, 2, 38, 3, 2, 37, 12, 2, 37, 17, 2, 37, 18, 2, 37, 19, 2, 37, 20, 2, 37, 21, 2, 37, 22, 2, 38, 17, 2, 38, 18, 2, 38, 19, 2, 38, 20, 2, 38, 21, 2, 38, 22, 2, 38, 23, 2, 39, 17, 2, 39, 18, 2, 39, 19, 2, 39, 20, 2, 39, 21, 2, 39, 22, 2, 39, 23, 2, 33, 25, 2, 32, 25, 2, 33, 24, 2, 32, 24, 2, 33, 26, 2, 32, 26, 2, 34, 27, 2, 33, 27, 2, 32, 27, 2, 29, 45, 2, 28, 45, 2, 27, 45, 2, 26, 45, 2, 25, 45, 2, 29, 44, 2, 28, 44, 2, 27, 44, 2, 26, 44, 2, 25, 44, 2, 29, 43, 2, 28, 43, 2, 27, 43, 2, 26, 43, 2, 25, 43, 2, 30, 42, 2, 29, 42, 2, 28, 42, 2, 27, 42, 2, 26, 42, 2, 25, 42, 2, 33, 42, 2, 33, 41, 2, 33, 40, 2, 33, 39, 2, 33, 38, 2, 33, 37, 2, 33, 36, 2, 34, 36, 2, 35, 36, 2, 32, 42, 2, 32, 41, 2, 32, 40, 2, 32, 39, 2, 32, 38, 2, 32, 37, 2, 32, 36, 2, 33, 35, 2, 34, 35, 2, 35, 35, 2, 31, 42, 2, 31, 41, 2, 31, 40, 2, 31, 39, 2, 31, 38, 2, 31, 37, 2, 31, 36, 2, 25, 30, 2, 24, 30, 2, 23, 30, 2, 25, 29, 2, 24, 29, 2, 23, 29, 2, 26, 28, 2, 25, 28, 2, 24, 28, 2, 23, 28, 2, 29, 28, 2, 28, 28, 2, 27, 28, 2, 27, 27, 2, 27, 26, 2, 24, 5, 2, 24, 4, 2, 23, 5, 2, 23, 4, 2, 23, 3, 2, 22, 5, 2, 22, 4, 2, 22, 3, 2, 22, 2, 2, 23, 2, 2, 21, 10, 2, 21, 11, 2, 20, 11, 2, 22, 10, 2, 22, 11, 2, 22, 12, 2, 21, 12, 2, 20, 12, 2, 35, 7, 2, 35, 6, 2, 35, 5, 2, 35, 4, 2, 35, 3, 2, 34, 3, 2, 33, 3, 2, 32, 3, 2, 31, 3, 2, 30, 3, 2, 29, 3, 2, 28, 3, 2, 35, 2, 2, 34, 2, 2, 33, 2, 2, 32, 2, 2, 31, 2, 2, 30, 2, 2, 29, 2, 2, 28, 2, 2, 36, 7, 2, 36, 6, 2, 36, 5, 2, 36, 4, 2, 36, 3, 2, 35, 1, 2, 34, 1, 2, 33, 1, 2, 32, 1, 2, 31, 1, 2, 30, 1, 2, 29, 1, 2, 28, 1, 2, 37, 7, 2, 37, 6, 2, 37, 5, 2, 37, 4, 2, 37, 3, 2, 38, 2, 2, 39, 2, 2, 24, 41, 2, 24, 40, 2, 24, 39, 2, 24, 38, 2, 24, 37, 2, 24, 36, 2, 24, 35, 2, 24, 34, 2, 24, 33, 2, 24, 32, 2, 25, 32, 2, 23, 41, 2, 23, 40, 2, 23, 39, 2, 23, 38, 2, 23, 37, 2, 23, 36, 2, 23, 35, 2, 23, 34, 2, 23, 33, 2, 23, 32, 2, 22, 41, 2, 22, 40, 2, 22, 39, 2, 22, 38, 2, 22, 37, 2, 22, 36, 2, 22, 35, 2, 22, 34, 2, 22, 33, 2, 22, 32, 2, 24, 31, 2, 25, 31, 2, 21, 41, 2, 20, 41, 2, 19, 41, 2, 18, 41, 2, 17, 41, 2, 16, 41, 2, 15, 41, 2, 14, 41, 2, 13, 41, 2, 12, 41, 2, 11, 41, 2, 10, 41, 2, 21, 40, 2, 20, 40, 2, 19, 40, 2, 18, 40, 2, 17, 40, 2, 16, 40, 2, 15, 40, 2, 14, 40, 2, 13, 40, 2, 12, 40, 2, 11, 40, 2, 10, 40, 2, 21, 39, 2, 20, 39, 2, 19, 39, 2, 18, 39, 2, 17, 39, 2, 16, 39, 2, 15, 39, 2, 14, 39, 2, 13, 39, 2, 12, 39, 2, 11, 39, 2, 10, 39, 2, 21, 38, 2, 20, 38, 2, 19, 38, 2, 18, 38, 2, 17, 38, 2, 16, 38, 2, 15, 38, 2, 14, 38, 2, 13, 38, 2, 12, 38, 2, 11, 38, 2, 10, 38, 2, 36, 32, 2, 36, 31, 2, 36, 30, 2, 36, 29, 2, 36, 28, 2, 36, 27, 2, 37, 32, 2, 37, 31, 2, 37, 30, 2, 37, 29, 2, 37, 28, 2, 37, 27, 2, 38, 32, 2, 38, 31, 2, 38, 30, 2, 38, 29, 2, 38, 28, 2, 38, 27, 2, 38, 26, 2, 39, 32, 2, 39, 31, 2, 39, 30, 2, 39, 29, 2, 39, 28, 2, 39, 27, 2, 39, 26, 2, 23, 26, 2, 23, 27, 2, 24, 26, 2, 24, 27, 2, 25, 26, 2, 25, 27, 2, 23, 21, 2, 23, 20, 2, 23, 19, 2, 23, 18, 2, 23, 17, 2, 23, 16, 2, 23, 15, 2, 23, 14, 2, 22, 14, 2, 21, 14, 2, 20, 14, 2, 24, 21, 2, 24, 20, 2, 24, 19, 2, 24, 18, 2, 24, 17, 2, 24, 16, 2, 24, 15, 2, 24, 14, 2, 23, 13, 2, 22, 13, 2, 21, 13, 2, 20, 13, 2, 25, 21, 2, 25, 20, 2, 25, 19, 2, 25, 18, 2, 25, 17, 2, 25, 16, 2, 25, 15, 2, 25, 14, 2, 27, 24, 2, 27, 23, 2, 28, 23, 2, 4, 29, 2, 3, 29, 2, 2, 29, 2, 44, 26, 2, 43, 26, 2, 42, 26, 2, 41, 26, 2, 40, 26, 2, 44, 25, 2, 43, 25, 2, 42, 25, 2, 41, 25, 2, 40, 25, 2, 39, 25, 2, 38, 25, 2, 45, 24, 2, 44, 24, 2, 43, 24, 2, 42, 24, 2, 41, 24, 2, 40, 24, 2, 39, 24, 2, 38, 24, 2, 45, 23, 2, 44, 23, 2, 43, 23, 2, 42, 23, 2, 41, 23, 2, 40, 23, 2, 6, 37, 2, 6, 36, 2, 6, 35, 2, 6, 34, 2, 5, 33, 2, 7, 37, 2, 7, 36, 2, 7, 35, 2, 7, 34, 2, 5, 32, 2, 8, 37, 2, 8, 36, 2, 8, 35, 2, 8, 34, 2, 16, 5, 2, 16, 6, 2, 16, 7, 2, 16, 8, 2, 16, 9, 2, 16, 10, 2, 17, 5, 2, 17, 6, 2, 17, 7, 2, 17, 8, 2, 17, 9, 2, 17, 10, 2, 18, 5, 2, 18, 6, 2, 18, 7, 2, 18, 8, 2, 18, 9, 2, 18, 10, 2, 16, 4, 2, 19, 5, 2, 20, 5, 2, 21, 5, 2, 17, 4, 2, 18, 4, 2, 19, 4, 2, 20, 4, 2, 21, 4, 2, 16, 3, 2, 17, 3, 2, 18, 3, 2, 19, 3, 2, 20, 3, 2, 21, 3, 2, 10, 30, 2, 11, 30, 2, 12, 30, 2, 13, 30, 2, 14, 30, 2, 15, 30, 2, 16, 30, 2, 17, 30, 2, 18, 30, 2, 9, 29, 2, 10, 29, 2, 11, 29, 2, 12, 29, 2, 13, 29, 2, 14, 29, 2, 15, 29, 2, 16, 29, 2, 17, 29, 2, 18, 29, 2, 9, 28, 2, 10, 28, 2, 11, 28, 2, 12, 28, 2, 13, 28, 2, 14, 28, 2, 15, 28, 2, 16, 28, 2, 17, 28, 2, 18, 28, 2, 9, 27, 2, 10, 27, 2, 11, 27, 2, 12, 27, 2, 13, 27, 2, 14, 27, 2, 15, 27, 2, 16, 27, 2, 17, 27, 2, 18, 27, 2, 5, 31, 2, 5, 30, 2, 9, 34, 2, 9, 35, 2, 9, 36, 2, 9, 37, 2, 34, 7, 4, 34, 8, 4, 34, 9, 4, 34, 10, 4, 34, 11, 4, 34, 12, 4, 35, 12, 4, 36, 12, 4, 11, 1, 4, 11, 2, 4, 11, 3, 4, 12, 1, 4, 13, 1, 4, 14, 1, 4, 15, 1, 4, 16, 1, 4, 16, 2, 4, 11, 4, 4, 11, 5, 4, 11, 6, 4, 12, 6, 4, 13, 6, 4, 14, 6, 4, 15, 6, 4, 34, 42, 4, 34, 43, 4, 34, 44, 4, 34, 45, 4, 29, 46, 4, 34, 46, 4, 29, 47, 4, 30, 47, 4, 31, 47, 4, 32, 47, 4, 33, 47, 4, 34, 47, 4, 20, 42, 4, 20, 43, 4, 25, 41, 4, 20, 44, 4, 20, 45, 4, 20, 46, 4, 21, 46, 4, 22, 46, 4, 23, 46, 4, 24, 46, 4, 25, 46, 4, 5, 29, 4, 6, 29, 4, 7, 29, 4, 8, 29, 4, 10, 31, 4, 10, 32, 4, 10, 33, 4, 5, 34, 4, 10, 34, 4, 20, 6, 4, 20, 7, 4, 25, 5, 4, 25, 6, 4, 25, 7, 4, 20, 8, 4, 25, 8, 4, 20, 9, 4, 25, 9, 4, 20, 10, 4, 23, 10, 4, 24, 10, 4, 25, 10, 4, 35, 32, 4, 35, 33, 4, 35, 34, 4, 40, 32, 4, 40, 33, 4, 40, 34, 4, 40, 35, 4, 40, 36, 4, 35, 37, 4, 36, 37, 4, 37, 37, 4, 38, 37, 4, 39, 37, 4, 40, 37, 4, 5, 37, 4, 5, 38, 4, 5, 39, 4, 10, 37, 4, 5, 40, 4, 5, 41, 4, 5, 42, 4, 6, 42, 4, 7, 42, 4, 8, 42, 4, 9, 42, 4, 10, 42, 4, 30, 28, 4, 30, 29, 4, 30, 30, 4, 30, 31, 4, 30, 32, 4, 25, 33, 4, 26, 33, 4, 27, 33, 4, 28, 33, 4, 29, 33, 4, 30, 33, 4, 22, 21, 4, 22, 22, 4, 22, 23, 4, 26, 21, 4, 27, 21, 4, 27, 22, 4, 22, 24, 4, 22, 25, 4, 27, 25, 4, 22, 26, 4, 26, 26, 4, 46, 24, 4, 47, 24, 4, 48, 24, 4, 49, 24, 4, 49, 25, 4, 49, 26, 4, 44, 27, 4, 49, 27, 4, 44, 28, 4, 49, 28, 4, 44, 29, 4, 45, 29, 4, 46, 29, 4, 47, 29, 4, 48, 29, 4, 49, 29, 4, 35, 13, 4, 35, 14, 4, 40, 12, 4, 40, 13, 4, 40, 14, 4, 35, 15, 4, 40, 15, 4, 35, 16, 4, 40, 16, 4, 35, 17, 4, 36, 17, 4, 40, 17, 4, 39, 0, 4, 39, 1, 4, 44, 0, 4, 44, 1, 4, 44, 2, 4, 44, 3, 4, 40, 4, 4, 41, 4, 4, 42, 4, 4, 43, 4, 4, 44, 4, 4, 15, 10, 4, 15, 11, 4, 15, 12, 4, 19, 10, 4, 15, 13, 4, 15, 14, 4, 15, 15, 4, 16, 15, 4, 17, 15, 4, 18, 15, 4, 19, 15, 4, 20, 15, 4, 33, 22, 4, 33, 23, 4, 34, 22, 4, 35, 22, 4, 36, 22, 4, 35, 27, 4, 23, 0, 4, 23, 1, 4, 28, 0, 4, 25, 4, 4, 26, 4, 4, 27, 4, 4, 28, 4, 4, 0, 29, 4, 0, 30, 4, 0, 31, 4, 1, 29, 4, 0, 32, 4, 0, 33, 4, 0, 34, 4, 1, 34, 4, 2, 34, 4, 3, 34, 4, 4, 34, 4, 18, 26, 4, 19, 26, 4, 20, 26, 4, 21, 26, 4, 18, 31, 4, 19, 31, 4, 20, 31, 4, 21, 31, 4, 22, 31, 4, 23, 31, 4, 1, 24, 4, 1, 25, 4, 1, 26, 4, 2, 24, 4, 3, 24, 4, 4, 24, 4, 5, 24, 4, 6, 24, 4, 6, 25, 4, 6, 26, 4, 1, 27, 4, 6, 27, 4, 1, 28, 4, 6, 28, 4, 29, 23, 4, 30, 23, 4, 31, 23, 4, 32, 23, 4, 31, 28, 4, 32, 28, 4, 40, 11, 4, 40, 10, 4, 40, 9, 4, 40, 8, 4, 40, 7, 4, 40, 6, 4, 40, 5, 4, 37, 2, 4, 36, 18, 4, 36, 19, 4, 36, 20, 4, 36, 21, 4, 40, 18, 4, 40, 19, 4, 40, 20, 4, 40, 21, 4, 40, 22, 4, 33, 28, 4, 34, 28, 4, 35, 28, 4, 28, 46, 4, 27, 46, 4, 26, 46, 4, 29, 41, 4, 30, 41, 4, 28, 41, 4, 27, 41, 4, 26, 41, 4, 34, 41, 4, 34, 40, 4, 34, 39, 4, 34, 38, 4, 34, 37, 4, 32, 35, 4, 31, 35, 4, 32, 34, 4, 33, 34, 4, 34, 34, 4, 30, 40, 4, 30, 39, 4, 30, 38, 4, 30, 37, 4, 30, 36, 4, 30, 35, 4, 26, 27, 4, 21, 2, 4, 21, 1, 4, 22, 1, 4, 23, 11, 4, 23, 12, 4, 34, 6, 4, 34, 5, 4, 34, 4, 4, 36, 2, 4, 33, 4, 4, 32, 4, 4, 31, 4, 4, 30, 4, 4, 29, 4, 4, 36, 1, 4, 34, 0, 4, 35, 0, 4, 36, 0, 4, 33, 0, 4, 32, 0, 4, 31, 0, 4, 30, 0, 4, 29, 0, 4, 37, 1, 4, 38, 1, 4, 25, 40, 4, 25, 39, 4, 25, 38, 4, 25, 37, 4, 25, 36, 4, 25, 35, 4, 25, 34, 4, 21, 37, 4, 21, 36, 4, 21, 35, 4, 21, 34, 4, 21, 33, 4, 21, 32, 4, 19, 42, 4, 18, 42, 4, 17, 42, 4, 16, 42, 4, 15, 42, 4, 14, 42, 4, 13, 42, 4, 12, 42, 4, 11, 42, 4, 20, 37, 4, 19, 37, 4, 18, 37, 4, 17, 37, 4, 16, 37, 4, 15, 37, 4, 14, 37, 4, 13, 37, 4, 12, 37, 4, 11, 37, 4, 35, 31, 4, 35, 30, 4, 35, 29, 4, 40, 31, 4, 40, 30, 4, 40, 29, 4, 40, 28, 4, 40, 27, 4, 22, 20, 4, 22, 19, 4, 22, 18, 4, 22, 17, 4, 22, 16, 4, 22, 15, 4, 24, 13, 4, 21, 15, 4, 25, 13, 4, 24, 12, 4, 26, 20, 4, 26, 19, 4, 26, 18, 4, 26, 17, 4, 26, 16, 4, 26, 15, 4, 26, 14, 4, 26, 13, 4, 28, 22, 4, 29, 22, 4, 43, 27, 4, 42, 27, 4, 41, 27, 4, 46, 23, 4, 44, 22, 4, 45, 22, 4, 46, 22, 4, 43, 22, 4, 42, 22, 4, 41, 22, 4, 5, 36, 4, 5, 35, 4, 15, 7, 4, 15, 8, 4, 15, 9, 4, 19, 6, 4, 19, 7, 4, 19, 8, 4, 19, 9, 4, 17, 2, 4, 18, 2, 4, 19, 2, 4, 20, 2, 4, 11, 31, 4, 12, 31, 4, 13, 31, 4, 14, 31, 4, 15, 31, 4, 16, 31, 4, 17, 31, 4, 8, 28, 4, 8, 27, 4, 8, 26, 4, 9, 26, 4, 10, 26, 4, 11, 26, 4, 12, 26, 4, 13, 26, 4, 14, 26, 4, 15, 26, 4, 16, 26, 4, 17, 26, 4, 10, 35, 4, 10, 36, 4)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="FinalGridMap" type="GridMap" parent="Gridmaps"]
mesh_library = ExtResource("4_l2w8b")

[node name="GridMapMeshCustomizer" type="GridMap" parent="Gridmaps" node_paths=PackedStringArray("source_gridmap", "final_gridmap")]
mesh_library = ExtResource("2_nilto")
data = {
"cells": PackedInt32Array(3, 4, 1048679, 3, 5, 1048673, 3, 6, 1048673, 3, 7, 1048673, 3, 8, 1048673, 3, 9, 655463, 4, 4, 97, 4, 5, 1048606, 4, 6, 1048606, 4, 7, 1048606, 4, 8, 1048606, 4, 9, 97, 5, 4, 97, 5, 5, 1048606, 5, 6, 1048606, 5, 7, 1048606, 5, 8, 1048606, 5, 9, 97, 6, 4, 97, 6, 5, 1048606, 6, 6, 1048606, 6, 7, 1048606, 6, 8, 1048606, 6, 9, 97, 7, 4, 97, 7, 5, 1048606, 7, 6, 1048606, 7, 7, 1048606, 7, 8, 1048606, 7, 9, 97, 8, 4, 103, 8, 5, 1048673, 8, 6, 1048673, 8, 7, 1048673, 8, 8, 1048673, 8, 9, 1441895)
}
script = ExtResource("3_dumil")
border_size = 50
source_gridmap = NodePath("../SourceGridMap")
final_gridmap = NodePath("../FinalGridMap")
mesh_lib = ExtResource("4_l2w8b")
floor_mesh_idx = 30
wall_mesh_idx = 97
corner_mesh_idx = 103
hallway_mesh_idx = 30
metadata/_editor_floor_ = Vector3(0, 2, 0)

[node name="WallGridSpawner" type="GridMap" parent="Gridmaps" node_paths=PackedStringArray("dun_gen", "source_gridmap")]
mesh_library = ExtResource("4_sun1y")
cell_center_y = false
data = {
"cells": PackedInt32Array(65486, 65486, 1, 65486, 51, 1, 51, 65486, 1, 65487, 65486, 1, 65487, 51, 1, 65486, 65487, 1, 51, 65487, 1, 65488, 65486, 1, 65488, 51, 1, 65486, 65488, 1, 51, 65488, 1, 65489, 65486, 1, 65489, 51, 1, 65486, 65489, 1, 51, 65489, 1, 65490, 65486, 1, 65490, 51, 1, 65486, 65490, 1, 51, 65490, 1, 65491, 65486, 1, 65491, 51, 1, 65486, 65491, 1, 51, 65491, 1, 65492, 65486, 1, 65492, 51, 1, 65486, 65492, 1, 51, 65492, 1, 65493, 65486, 1, 65493, 51, 1, 65486, 65493, 1, 51, 65493, 1, 65494, 65486, 1, 65494, 51, 1, 65486, 65494, 1, 51, 65494, 1, 65495, 65486, 1, 65495, 51, 1, 65486, 65495, 1, 51, 65495, 1, 65496, 65486, 1, 65496, 51, 1, 65486, 65496, 1, 51, 65496, 1, 65497, 65486, 1, 65497, 51, 1, 65486, 65497, 1, 51, 65497, 1, 65498, 65486, 1, 65498, 51, 1, 65486, 65498, 1, 51, 65498, 1, 65499, 65486, 1, 65499, 51, 1, 65486, 65499, 1, 51, 65499, 1, 65500, 65486, 1, 65500, 51, 1, 65486, 65500, 1, 51, 65500, 1, 65501, 65486, 1, 65501, 51, 1, 65486, 65501, 1, 51, 65501, 1, 65502, 65486, 1, 65502, 51, 1, 65486, 65502, 1, 51, 65502, 1, 65503, 65486, 1, 65503, 51, 1, 65486, 65503, 1, 51, 65503, 1, 65504, 65486, 1, 65504, 51, 1, 65486, 65504, 1, 51, 65504, 1, 65505, 65486, 1, 65505, 51, 1, 65486, 65505, 1, 51, 65505, 1, 65506, 65486, 1, 65506, 51, 1, 65486, 65506, 1, 51, 65506, 1, 65507, 65486, 1, 65507, 51, 1, 65486, 65507, 1, 51, 65507, 1, 65508, 65486, 1, 65508, 51, 1, 65486, 65508, 1, 51, 65508, 1, 65509, 65486, 1, 65509, 51, 1, 65486, 65509, 1, 51, 65509, 1, 65510, 65486, 1, 65510, 51, 1, 65486, 65510, 1, 51, 65510, 1, 65511, 65486, 1, 65511, 51, 1, 65486, 65511, 1, 51, 65511, 1, 65512, 65486, 1, 65512, 51, 1, 65486, 65512, 1, 51, 65512, 1, 65513, 65486, 1, 65513, 51, 1, 65486, 65513, 1, 51, 65513, 1, 65514, 65486, 1, 65514, 51, 1, 65486, 65514, 1, 51, 65514, 1, 65515, 65486, 1, 65515, 51, 1, 65486, 65515, 1, 51, 65515, 1, 65516, 65486, 1, 65516, 51, 1, 65486, 65516, 1, 51, 65516, 1, 65517, 65486, 1, 65517, 51, 1, 65486, 65517, 1, 51, 65517, 1, 65518, 65486, 1, 65518, 51, 1, 65486, 65518, 1, 51, 65518, 1, 65519, 65486, 1, 65519, 51, 1, 65486, 65519, 1, 51, 65519, 1, 65520, 65486, 1, 65520, 51, 1, 65486, 65520, 1, 51, 65520, 1, 65521, 65486, 1, 65521, 51, 1, 65486, 65521, 1, 51, 65521, 1, 65522, 65486, 1, 65522, 51, 1, 65486, 65522, 1, 51, 65522, 1, 65523, 65486, 1, 65523, 51, 1, 65486, 65523, 1, 51, 65523, 1, 65524, 65486, 1, 65524, 51, 1, 65486, 65524, 1, 51, 65524, 1, 65525, 65486, 1, 65525, 51, 1, 65486, 65525, 1, 51, 65525, 1, 65526, 65486, 1, 65526, 51, 1, 65486, 65526, 1, 51, 65526, 1, 65527, 65486, 1, 65527, 51, 1, 65486, 65527, 1, 51, 65527, 1, 65528, 65486, 1, 65528, 51, 1, 65486, 65528, 1, 51, 65528, 1, 65529, 65486, 1, 65529, 51, 1, 65486, 65529, 1, 51, 65529, 1, 65530, 65486, 1, 65530, 51, 1, 65486, 65530, 1, 51, 65530, 1, 65531, 65486, 1, 65531, 51, 1, 65486, 65531, 1, 51, 65531, 1, 65532, 65486, 1, 65532, 51, 1, 65486, 65532, 1, 51, 65532, 1, 65533, 65486, 1, 65533, 51, 1, 65486, 65533, 1, 51, 65533, 1, 65534, 65486, 1, 65534, 51, 1, 65486, 65534, 1, 51, 65534, 1, 65535, 65486, 1, 65535, 51, 1, 65486, 65535, 1, 51, 65535, 1, 0, 65486, 1, 0, 51, 1, 65486, 0, 1, 51, 0, 1, 1, 65486, 1, 1, 51, 1, 65486, 1, 1, 51, 1, 1, 2, 65486, 1, 2, 51, 1, 65486, 2, 1, 51, 2, 1, 3, 65486, 1, 3, 51, 1, 65486, 3, 1, 51, 3, 1, 4, 65486, 1, 4, 51, 1, 65486, 4, 1, 51, 4, 1, 5, 65486, 1, 5, 51, 1, 65486, 5, 1, 51, 5, 1, 6, 65486, 1, 6, 51, 1, 65486, 6, 1, 51, 6, 1, 7, 65486, 1, 7, 51, 1, 65486, 7, 1, 51, 7, 1, 8, 65486, 1, 8, 51, 1, 65486, 8, 1, 51, 8, 1, 9, 65486, 1, 9, 51, 1, 65486, 9, 1, 51, 9, 1, 10, 65486, 1, 10, 51, 1, 65486, 10, 1, 51, 10, 1, 11, 65486, 1, 11, 51, 1, 65486, 11, 1, 51, 11, 1, 12, 65486, 1, 12, 51, 1, 65486, 12, 1, 51, 12, 1, 13, 65486, 1, 13, 51, 1, 65486, 13, 1, 51, 13, 1, 14, 65486, 1, 14, 51, 1, 65486, 14, 1, 51, 14, 1, 15, 65486, 1, 15, 51, 1, 65486, 15, 1, 51, 15, 1, 16, 65486, 1, 16, 51, 1, 65486, 16, 1, 51, 16, 1, 17, 65486, 1, 17, 51, 1, 65486, 17, 1, 51, 17, 1, 18, 65486, 1, 18, 51, 1, 65486, 18, 1, 51, 18, 1, 19, 65486, 1, 19, 51, 1, 65486, 19, 1, 51, 19, 1, 20, 65486, 1, 20, 51, 1, 65486, 20, 1, 51, 20, 1, 21, 65486, 1, 21, 51, 1, 65486, 21, 1, 51, 21, 1, 22, 65486, 1, 22, 51, 1, 65486, 22, 1, 51, 22, 1, 23, 65486, 1, 23, 51, 1, 65486, 23, 1, 51, 23, 1, 24, 65486, 1, 24, 51, 1, 65486, 24, 1, 51, 24, 1, 25, 65486, 1, 25, 51, 1, 65486, 25, 1, 51, 25, 1, 26, 65486, 1, 26, 51, 1, 65486, 26, 1, 51, 26, 1, 27, 65486, 1, 27, 51, 1, 65486, 27, 1, 51, 27, 1, 28, 65486, 1, 28, 51, 1, 65486, 28, 1, 51, 28, 1, 29, 65486, 1, 29, 51, 1, 65486, 29, 1, 51, 29, 1, 30, 65486, 1, 30, 51, 1, 65486, 30, 1, 51, 30, 1, 31, 65486, 1, 31, 51, 1, 65486, 31, 1, 51, 31, 1, 32, 65486, 1, 32, 51, 1, 65486, 32, 1, 51, 32, 1, 33, 65486, 1, 33, 51, 1, 65486, 33, 1, 51, 33, 1, 34, 65486, 1, 34, 51, 1, 65486, 34, 1, 51, 34, 1, 35, 65486, 1, 35, 51, 1, 65486, 35, 1, 51, 35, 1, 36, 65486, 1, 36, 51, 1, 65486, 36, 1, 51, 36, 1, 37, 65486, 1, 37, 51, 1, 65486, 37, 1, 51, 37, 1, 38, 65486, 1, 38, 51, 1, 65486, 38, 1, 51, 38, 1, 39, 65486, 1, 39, 51, 1, 65486, 39, 1, 51, 39, 1, 40, 65486, 1, 40, 51, 1, 65486, 40, 1, 51, 40, 1, 41, 65486, 1, 41, 51, 1, 65486, 41, 1, 51, 41, 1, 42, 65486, 1, 42, 51, 1, 65486, 42, 1, 51, 42, 1, 43, 65486, 1, 43, 51, 1, 65486, 43, 1, 51, 43, 1, 44, 65486, 1, 44, 51, 1, 65486, 44, 1, 51, 44, 1, 45, 65486, 1, 45, 51, 1, 65486, 45, 1, 51, 45, 1, 46, 65486, 1, 46, 51, 1, 65486, 46, 1, 51, 46, 1, 47, 65486, 1, 47, 51, 1, 65486, 47, 1, 51, 47, 1, 48, 65486, 1, 48, 51, 1, 65486, 48, 1, 51, 48, 1, 49, 65486, 1, 49, 51, 1, 65486, 49, 1, 51, 49, 1, 50, 65486, 1, 50, 51, 1, 65486, 50, 1, 51, 50, 1)
}
script = ExtResource("4_8fj2y")
dun_gen = NodePath("../DunGen")
source_gridmap = NodePath("../SourceGridMap")
border_size = 50
fill_height = 1
metadata/_editor_floor_ = Vector3(0, 9, 14)

[node name="Knight" parent="." instance=ExtResource("7_mwitb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 74, 2, 20)

[node name="NPC1" parent="." instance=ExtResource("9_eli7f")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 28, 1, 8)
